# website

./: .gitignore  Anchor.toml  README.md  pubspec.yaml  vercel.json
.claude/: settings.local.json
android/app/: build.gradle.kts
backend/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/scripts/: cancel-stale-matches.js  check-balances.ts  check-game.ts  check-game19.ts  check-games-20-21.ts  check-stuck-match.js  cleanup-stale-matches.ts  clear-queue.mjs  fix-and-refund.js  list-all-recent.ts  list-last-matches.js  list-recent-matches.ts  recover-sol.ts  refund-game18.ts  refund-game19.ts  refund-game21.ts  refund-game26.js  refund-last-games.js  refund-stuck-games.js  retry-stuck-settlements.ts  settle-stuck-match.ts
backend/src/: config.ts  index.ts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
programs/solfight/: Cargo.toml
programs/solfight/src/: errors.rs  events.rs  lib.rs
programs/solfight/src/instructions/: cancel_pending_game.rs  claim_winnings.rs  close_game.rs  create_profile.rs  deposit_to_escrow.rs  end_game.rs  initialize_platform.rs  mod.rs  refund_escrow.rs  start_game.rs
programs/solfight/src/state/: game.rs  mod.rs  platform.rs  player_profile.rs
scripts/: deploy.sh  initialize_platform.ts
test/: widget_test.dart
web/: index.html  lw_chart.js  manifest.json  tradingview_chart.html
windows/: CMakeLists.txt
(+133 files in other folders)
