[package]
name = "solfight"
version = "0.1.0"
description = "SolFight - 1v1 Competitive Trading on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solfight"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
