[package]
name = "solfight"
version = "0.1.0"
description = "SolFight - 1v1 Competitive Trading on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solfight"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Pin blake3 to avoid edition2024 requirement from latest versions
blake3 = "=1.5.5"
